--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <link rel="shortcut icon" type="image" href="../assets/logo.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vector Development</title>
 </head>
 <body>
+
+    <div class="drapes-profile">
+        <img src="../assets/drapes.png" alt="drapes" class="drapes-profile-img">
+        <h1>drapes#4798</h1>
+        <h5></h5>
+    </div>
+
     <div class="dts-profile">
         <img src="../assets/dts.png" alt="dts" class="dts-profile-img">
-        <div class="name">DTS#5976</div>
-        <div class="description">Casual developer.</div>
+        <h1>DTS#5976</h1>
+        <h5>Developer</h5>
+        <ul>
+            <li>
+                <a href="https://twitter.com/official_DTS_11" class="twitter">
+                    <i class="fab fa-twitter" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/DTS-11" class="github">
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://discord.gg/WhNVDTF" class="discord">
+                    <i class="fab fa-discord" aria-hidden="true"></i>
+                </a>
+            </li>
+        </ul>
     </div>
+
+    <div class="gdkid-profile">
+        <img src="../assets/gdkid.png" alt="gdkid" class="gdkid-profile-img">
+        <h1>GDKID#0111</h1>
+        <h5></h5>
+    </div>
+
 </body>
 </html>
