social media icons complete

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,18 @@
         <img src="../assets/drapes.png" alt="drapes" class="drapes-profile-img">
         <h1>drapes#4798</h1>
         <h5></h5>
+        <ul>
+            <li>
+                <a href="https://github.com/drapespy" class="github">
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com/_vqughn_" class="instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
     </div>
 
     <div class="dts-profile">
@@ -44,6 +56,13 @@
         <img src="../assets/gdkid.png" alt="gdkid" class="gdkid-profile-img">
         <h1>GDKID#0111</h1>
         <h5></h5>
+        <ul>
+            <li>
+                <a href="https://github.com/GDKID69" class="github">
+                    <i class="fab fa-github" aria-hidden="true"></i>
+                </a>
+            </li>
+        </ul>
     </div>
 
 </body>
