--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
     <link rel="shortcut icon" type="image" href="../assets/logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -11,55 +10,55 @@
 </head>
 <body>
 
-    <div class="drapes-profile">
-        <img src="../assets/drapes.png" alt="drapes" class="drapes-profile-img">
+    <div class="profile">
+        <img src="../assets/drapes.png" alt="drapes" class="profile-img">
         <h1>drapes#4798</h1>
         <h5></h5>
         <ul>
             <li>
                 <a href="https://github.com/drapespy" class="github">
-                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <i class="fab fa-github fa-2x" style="color: white;" aria-hidden="true"></i>
                 </a>
             </li>
             <li>
                 <a href="https://instagram.com/_vqughn_" class="instagram">
-                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-instagram fa-2x" style="color: rgb(247, 201, 117);" aria-hidden="true"></i>
                 </a>
             </li>
         </ul>
     </div>
 
-    <div class="dts-profile">
-        <img src="../assets/dts.png" alt="dts" class="dts-profile-img">
+    <div class="profile">
+        <img src="../assets/dts.png" alt="dts" class="profile-img">
         <h1>DTS#5976</h1>
         <h5>Developer</h5>
         <ul>
             <li>
                 <a href="https://twitter.com/official_DTS_11" class="twitter">
-                    <i class="fab fa-twitter" aria-hidden="true"></i>
+                    <i class="fab fa-twitter fa-2x" style="color: rgb(14, 162, 248);" aria-hidden="true"></i>
                 </a>
             </li>
             <li>
                 <a href="https://github.com/DTS-11" class="github">
-                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <i class="fab fa-github fa-2x" style="color: white;" aria-hidden="true"></i>
                 </a>
             </li>
             <li>
                 <a href="https://discord.gg/WhNVDTF" class="discord">
-                    <i class="fab fa-discord" aria-hidden="true"></i>
+                    <i class="fab fa-discord fa-2x" style="color: #404EED;" aria-hidden="true"></i>
                 </a>
             </li>
         </ul>
     </div>
 
-    <div class="gdkid-profile">
-        <img src="../assets/gdkid.png" alt="gdkid" class="gdkid-profile-img">
+    <div class="profile">
+        <img src="../assets/gdkid.png" alt="gdkid" class="profile-img">
         <h1>GDKID#0111</h1>
         <h5></h5>
         <ul>
             <li>
                 <a href="https://github.com/GDKID69" class="github">
-                    <i class="fab fa-github" aria-hidden="true"></i>
+                    <i class="fab fa-github fa-2x" style="color: white;" aria-hidden="true"></i>
                 </a>
             </li>
         </ul>
