--- a/templates/style.css
+++ b/templates/style.css
@@ -3,3 +3,51 @@
     padding: 0;
     text-decoration: none;
 }
+
+body {
+    background-color: rgb(82, 81, 81);
+}
+
+.profile {
+    width: 15%;
+    height: 100%;
+    border-radius: 25px 25px 25px 25px;
+    background: rgb(51, 51, 51);
+    padding: 25px;
+    display: inline-block;
+    text-align: center;
+    margin: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-left: 10%;
+    color: rgb(255, 255, 255);
+    font-family: 'Century Gothic', sans-serif;
+}
+
+.profile-img {
+    border-radius: 50%;
+}
+
+.h1 {
+    font-size: 40px;
+    letter-spacing: 4px;
+    font-weight: 100;
+}
+
+.profile h5 {
+    font-size: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    letter-spacing: 3px;
+    font-weight: 100;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li{
+    display: inline-block;
+    margin: 6px;
+    list-style: none;
+}
