some frontend stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,59 +9,70 @@
     <title>Vector Development</title>
 </head>
 <body>
-
-    <div class="profile">
-        <img src="../assets/drapes.png" alt="drapes" class="profile-img">
-        <h1>drapes#4798</h1>
-        <h5></h5>
-        <ul>
-            <li>
-                <a href="https://github.com/drapespy" class="github">
-                    <i class="fab fa-github fa-2x" style="color: white;" aria-hidden="true"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://instagram.com/_vqughn_" class="instagram">
-                    <i class="fab fa-instagram fa-2x" style="color: rgb(247, 201, 117);" aria-hidden="true"></i>
-                </a>
-            </li>
-        </ul>
+    <div class="site-header">
+        <div class="site-header-inner">
+            Site header woo
+        </div>
     </div>
-
-    <div class="profile">
-        <img src="../assets/dts.png" alt="dts" class="profile-img">
-        <h1>DTS#5976</h1>
-        <h5>Developer</h5>
-        <ul>
-            <li>
-                <a href="https://twitter.com/official_DTS_11" class="twitter">
-                    <i class="fab fa-twitter fa-2x" style="color: rgb(14, 162, 248);" aria-hidden="true"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://github.com/DTS-11" class="github">
-                    <i class="fab fa-github fa-2x" style="color: white;" aria-hidden="true"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://discord.gg/WhNVDTF" class="discord">
-                    <i class="fab fa-discord fa-2x" style="color: #404EED;" aria-hidden="true"></i>
-                </a>
-            </li>
-        </ul>
+    <div class="background">
+        <div class="panel-1"></div>
+        <div class="panel-2"></div>
+        <div class="panel-3"></div>
     </div>
+    <div class="profile-container">
+        <div class="profile-card">
+            <img src="https://cdn.discordapp.com/avatars/583745403598405632/16c8720e6cad699fb884866ed22e6194.png?size=1024" alt="drapes" class="profile-img">
+            <span class="profile-name">drapes#4798</span>
+            <span></span>
+            <ul>
+                <span>
+                    <a href="https://github.com/drapespy" class="github">
+                        <i class="fab fa-github fa-2x" style="color: white;" aria-hidden="true"></i>
+                    </a>
+                </span>
+                <span>
+                    <a href="https://instagram.com/_vqughn_" class="instagram">
+                        <i class="fab fa-instagram fa-2x" style="color: rgb(247, 201, 117);" aria-hidden="true"></i>
+                    </a>
+                </span>
+            </ul>
+        </div>
+        
+        <div class="profile-card">
+            <img src="https://cdn.discordapp.com/avatars/710247495334232164/0ee322effa7d7a5492d259e5a00a2a76.png?size=1024" alt="dts" class="profile-img">
+            <span class="profile-name">DTS#5976</span>
+            <span>Developer</span>
+            <ul>
+                <span>
+                    <a href="https://twitter.com/official_DTS_11" class="twitter">
+                        <i class="fab fa-twitter fa-2x" style="color: #1DA1F2;" aria-hidden="true"></i>
+                    </a>
+                </span>
+                <span>
+                    <a href="https://github.com/DTS-11" class="github">
+                        <i class="fab fa-github fa-2x" style="color: white;" aria-hidden="true"></i>
+                    </a>
+                </span>
+                <span>
+                    <a href="https://discord.gg/WhNVDTF" class="discord">
+                        <i class="fab fa-discord fa-2x" style="color: #5865F2;" aria-hidden="true"></i>
+                    </a>
+                </span>
+            </ul>
+        </div>
 
-    <div class="profile">
-        <img src="../assets/gdkid.png" alt="gdkid" class="profile-img">
-        <h1>GDKID#0111</h1>
-        <h5></h5>
-        <ul>
-            <li>
-                <a href="https://github.com/GDKID69" class="github">
-                    <i class="fab fa-github fa-2x" style="color: white;" aria-hidden="true"></i>
-                </a>
-            </li>
-        </ul>
+        <div class="profile-card">
+            <img src="https://cdn.discordapp.com/avatars/596481615253733408/742f6979fe30ab201350bf99dafd2624.png?size=1024" alt="gdkid" class="profile-img">
+            <span class="profile-name">gdkid#0111</span>
+            <span></span>
+            <ul>
+                <span>
+                    <a href="https://github.com/GDKID69" class="github">
+                        <i class="fab fa-github fa-2x" style="color: white;" aria-hidden="true"></i>
+                    </a>
+                </span>
+            </ul>
+        </div>
     </div>
 
 </body>
