--- a/templates/style.css
+++ b/templates/style.css
@@ -1,53 +1,85 @@
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-}
-
 body {
-    background-color: rgb(82, 81, 81);
+  background-color: #323232;
+  margin: 0;
 }
 
-.profile {
-    width: 15%;
-    height: 100%;
-    border-radius: 25px 25px 25px 25px;
-    background: rgb(51, 51, 51);
-    padding: 25px;
-    display: inline-block;
-    text-align: center;
-    margin: auto;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    margin-left: 10%;
-    color: rgb(255, 255, 255);
-    font-family: 'Century Gothic', sans-serif;
+.site-header {
+  position: sticky;
+  height: 5em;
+  background: black;
+  color: white;
+}
+.site-header div {
+  text-align: center;
+  padding-top: 1.5em;
+  font-family: "Century Gothic", sans-serif;
+  font-size: larger;
 }
 
-.profile-img {
-    border-radius: 50%;
+.background {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: calc(100% - 5em);
+  z-index: -1;
+}
+.background div {
+  width: 100%;
+  background-color: rgba(30, 30, 30, 0.5);
+  box-shadow: inset 0 0 1000px rgba(8, 158, 196, 0.5);
+  transition: 0.2s ease-in-out;
+}
+.background div:hover {
+  transition: 0.2s ease-in-out;
+  box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
 }
 
-.h1 {
-    font-size: 40px;
-    letter-spacing: 4px;
-    font-weight: 100;
+.profile-container {
+  padding-top: 2em;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.profile-container .profile-card {
+  width: 33%;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  cursor: default !important;
+  color: white;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: "Century Gothic", sans-serif;
+}
+.profile-container .profile-card span {
+  font-size: 15px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  letter-spacing: 3px;
+  font-weight: 100;
+  padding: 0.2em;
+}
+.profile-container .profile-card span:not(.profile-name) {
+  padding-bottom: 1em;
+}
+.profile-container .profile-card img {
+  border-radius: 50%;
+  width: 10em;
+}
+.profile-container .profile-card .profile-name {
+  font-size: xx-large;
 }
 
-.profile h5 {
-    font-size: 15px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    letter-spacing: 3px;
-    font-weight: 100;
+li {
+  font-size: 40px;
+  letter-spacing: 4px;
+  font-weight: 100;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-}
-
-li{
-    display: inline-block;
-    margin: 6px;
-    list-style: none;
+  margin: 0;
+  padding: 0;
 }
