--- a/templates/index.html
+++ b/templates/index.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image" href="../assets/logo.png">
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vector Development</title>
 </head>
 <body>
+    
     <div class="site-header">
         <div class="site-header-inner">
-            Site header woo
+            Vector Development
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="#">Home</a>
+                <a href="#">Server</a>
+            </div>
         </div>
     </div>
+
     <div class="background">
         <div class="panel-1"></div>
         <div class="panel-2"></div>
         <div class="panel-3"></div>
     </div>
+
     <div class="profile-container">
         <div class="profile-card">
             <img src="https://cdn.discordapp.com/avatars/583745403598405632/16c8720e6cad699fb884866ed22e6194.png?size=1024" alt="drapes" class="profile-img">
