--- a/templates/style.css
+++ b/templates/style.css
@@ -6,14 +6,57 @@ body {
 .site-header {
   position: sticky;
   height: 5em;
-  background: black;
+  background: rgb(49, 49, 49);
   color: white;
 }
+
 .site-header div {
   text-align: center;
   padding-top: 1.5em;
   font-family: "Century Gothic", sans-serif;
   font-size: larger;
+}
+
+.dropbtn {
+  background-color: #008cff;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-left: 93%;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 1px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #0059ff;
 }
 
 .background {
@@ -23,12 +66,14 @@ body {
   height: calc(100% - 5em);
   z-index: -1;
 }
+
 .background div {
   width: 100%;
   background-color: rgba(30, 30, 30, 0.5);
   box-shadow: inset 0 0 1000px rgba(8, 158, 196, 0.5);
   transition: 0.2s ease-in-out;
 }
+
 .background div:hover {
   transition: 0.2s ease-in-out;
   box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
@@ -40,6 +85,7 @@ body {
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+
 .profile-container .profile-card {
   width: 33%;
   text-align: center;
@@ -53,6 +99,7 @@ body {
   text-overflow: ellipsis;
   font-family: "Century Gothic", sans-serif;
 }
+
 .profile-container .profile-card span {
   font-size: 15px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -60,13 +107,16 @@ body {
   font-weight: 100;
   padding: 0.2em;
 }
+
 .profile-container .profile-card span:not(.profile-name) {
   padding-bottom: 1em;
 }
+
 .profile-container .profile-card img {
   border-radius: 50%;
   width: 10em;
 }
+
 .profile-container .profile-card .profile-name {
   font-size: xx-large;
 }
