--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,7 @@ body {
 
     div {
         width: 100%;
-        background-color: rgba(30, 30, 30, 0.5);
+        background-color: black;
         box-shadow: inset 0 0 1000px rgba(8, 158, 196, 0.5);
         transition: .2s ease-in-out;
 
