--- a/templates/style.css
+++ b/templates/style.css
@@ -25,7 +25,7 @@ body {
 }
 .background div {
   width: 100%;
-  background-color: rgba(30, 30, 30, 0.5);
+  background-color: black;
   box-shadow: inset 0 0 1000px rgba(8, 158, 196, 0.5);
   transition: 0.2s ease-in-out;
 }
