better header (maybe)

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,23 +15,14 @@
         <div class="site-header-inner">
             Vector Development
         </div>
-        <div class="dropdown">
-            <button class="dropbtn">Menu</button>
-            <div class="dropdown-content">
-                <a href="#">Home</a>
-                <a href="#">Server</a>
-            </div>
+        <div class="header-items">
+            <label>Discord</label>
+            <label>Bots</label>
         </div>
     </div>
 
-    <div class="background">
-        <div class="panel-1"></div>
-        <div class="panel-2"></div>
-        <div class="panel-3"></div>
-    </div>
-
     <div class="profile-container">
-        <div class="profile-card">
+        <div class="profile-card card-1">
             <img src="https://cdn.discordapp.com/avatars/583745403598405632/16c8720e6cad699fb884866ed22e6194.png?size=1024" alt="drapes" class="profile-img">
             <span class="profile-name">drapes#4798</span>
             <span></span>
@@ -49,7 +40,7 @@
             </ul>
         </div>
         
-        <div class="profile-card">
+        <div class="profile-card card-2">
             <img src="https://cdn.discordapp.com/avatars/710247495334232164/0ee322effa7d7a5492d259e5a00a2a76.png?size=1024" alt="dts" class="profile-img">
             <span class="profile-name">DTS#5976</span>
             <span>Developer</span>
@@ -72,7 +63,7 @@
             </ul>
         </div>
 
-        <div class="profile-card">
+        <div class="profile-card card-3">
             <img src="https://cdn.discordapp.com/avatars/596481615253733408/742f6979fe30ab201350bf99dafd2624.png?size=1024" alt="gdkid" class="profile-img">
             <span class="profile-name">gdkid#0111</span>
             <span></span>
@@ -83,6 +74,12 @@
                     </a>
                 </span>
             </ul>
+        </div>
+
+        <div class="background">
+            <div class="panel-1"></div>
+            <div class="panel-2"></div>
+            <div class="panel-3"></div>
         </div>
     </div>
 
