--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,23 +3,54 @@ body {
     margin: 0;
 }
 
+@mixin profile-hover {
+    @for $i from 1 through 3 {
+        .card-#{$i}:hover ~ .background > .panel-#{$i} {
+            transition: .2s ease-in-out;
+            box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
+        }
+    }
+}
+
+@include profile-hover();
+
 .site-header {
     position: sticky;
+    width: 100%;
+    display: inline-flex;
+    align-items: baseline;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    top: 0;
     height: 5em;
     background: black;
     color: white;
+    box-shadow: 0 15px 25px black;
+    font-family: 'Century Gothic', sans-serif;
 
-    div {
-        text-align: center;
-        padding-top: 1.5em;
-        font-family: 'Century Gothic', sans-serif;
+    .site-header-inner {
+        padding-left: 1.5em;
+        font-size: x-large;
+    }
+
+    .header-items {
+        padding: 1.5em;
+        width: max-content;
+        display: inline-flex;
+        flex-direction: row-reverse;
         font-size: larger;
+        flex-wrap: wrap;
+
+        * {
+            padding-left: 2em;
+        }
     }
 }
 
 .background {
     display: flex;
     position: absolute;
+    top: 5em;
     width: 100%;
     height: calc(100% - 5em);
     z-index: -1;
@@ -32,13 +63,13 @@ body {
 
         &:hover {
             transition: .2s ease-in-out;
-            box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4)
+            box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
         }
     }
 }
 
 .profile-container {
-    padding-top: 2em;
+    padding-top: 3em;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -49,6 +80,7 @@ body {
         text-align: center;
         align-items: center;
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
         cursor: default !important;
@@ -78,14 +110,6 @@ body {
             font-size: xx-large;
         }
     }
-}
-
-li {
-    font-size: 40px;
-    letter-spacing: 4px;
-    font-weight: 100;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 ul {
