--- a/templates/style.css
+++ b/templates/style.css
@@ -3,94 +3,82 @@ body {
   margin: 0;
 }
 
+.card-1:hover ~ .background > .panel-1 {
+  transition: 0.2s ease-in-out;
+  box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
+}
+
+.card-2:hover ~ .background > .panel-2 {
+  transition: 0.2s ease-in-out;
+  box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
+}
+
+.card-3:hover ~ .background > .panel-3 {
+  transition: 0.2s ease-in-out;
+  box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
+}
+
 .site-header {
   position: sticky;
+  width: 100%;
+  display: inline-flex;
+  align-items: baseline;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  top: 0;
   height: 5em;
-  background: rgb(49, 49, 49);
+  background: black;
   color: white;
-}
-
-.site-header div {
-  text-align: center;
-  padding-top: 1.5em;
+  box-shadow: 0 15px 25px black;
   font-family: "Century Gothic", sans-serif;
+}
+.site-header .site-header-inner {
+  padding-left: 1.5em;
+  font-size: x-large;
+}
+.site-header .header-items {
+  padding: 1.5em;
+  width: max-content;
+  display: inline-flex;
+  flex-direction: row-reverse;
   font-size: larger;
+  flex-wrap: wrap;
 }
-
-.dropbtn {
-  background-color: #008cff;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-  margin-left: 93%;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 1px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown:hover .dropbtn {
-  background-color: #0059ff;
+.site-header .header-items * {
+  padding-left: 2em;
 }
 
 .background {
   display: flex;
   position: absolute;
+  top: 5em;
   width: 100%;
   height: calc(100% - 5em);
   z-index: -1;
 }
-
 .background div {
   width: 100%;
   background-color: black;
   box-shadow: inset 0 0 1000px rgba(8, 158, 196, 0.5);
   transition: 0.2s ease-in-out;
 }
-
 .background div:hover {
   transition: 0.2s ease-in-out;
   box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
 }
 
 .profile-container {
-  padding-top: 2em;
+  padding-top: 3em;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
-
 .profile-container .profile-card {
   width: 33%;
   text-align: center;
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   cursor: default !important;
@@ -99,7 +87,6 @@ body {
   text-overflow: ellipsis;
   font-family: "Century Gothic", sans-serif;
 }
-
 .profile-container .profile-card span {
   font-size: 15px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -107,26 +94,15 @@ body {
   font-weight: 100;
   padding: 0.2em;
 }
-
 .profile-container .profile-card span:not(.profile-name) {
   padding-bottom: 1em;
 }
-
 .profile-container .profile-card img {
   border-radius: 50%;
   width: 10em;
 }
-
 .profile-container .profile-card .profile-name {
   font-size: xx-large;
-}
-
-li {
-  font-size: 40px;
-  letter-spacing: 4px;
-  font-weight: 100;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 ul {
