--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image" href="../assets/logo.png">
-    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +18,15 @@
             <label>Discord</label>
             <label>Bots</label>
         </div>
+    </div>
+
+    <div>
+        <input type="checkbox" class="checkbox" id="checkbox">
+        <label for="checkbox" class="label">
+            <i class="fas fa-moon" style="color: #f1c40f;"></i>
+            <i class="fas fa-sun" style="color: #f39c12;"></i>
+            <div class="ball"></div>
+        </label>
     </div>
 
     <div class="profile-container">
@@ -83,5 +91,7 @@
         </div>
     </div>
 
+
+    <script src="script.js"></script>
 </body>
 </html>
