--- a/templates/style.css
+++ b/templates/style.css
@@ -1,8 +1,51 @@
-body {
-  background-color: #323232;
-  margin: 0;
+* {
+  box-sizing: border-box;
 }
 
+body {
+  background-color: #323641;
+  margin: 0;
+  transition: background .2s linear;
+}
+
+body.dark {
+  background-color: #25272e;
+}
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.checkbox:checked + .label .ball {
+  transform: translateX(24px);
+}
+
+.label {
+  margin-left: 95%;
+  padding: 5px;
+  background-color: #111;
+  height: 26px;
+  width: 50px;
+  position: relative;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transform: scale(1.1);
+}
+
+.ball {
+  background-color: white;
+  position: absolute;
+  height: 22px;
+  width: 22px;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  transition: transform .1s linear;
+}
+/*
 .card-1:hover ~ .background > .panel-1 {
   transition: 0.2s ease-in-out;
   box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
@@ -17,7 +60,7 @@ body {
   transition: 0.2s ease-in-out;
   box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
 }
-
+*/
 .site-header {
   position: sticky;
   width: 100%;
@@ -32,10 +75,12 @@ body {
   box-shadow: 0 15px 25px black;
   font-family: "Century Gothic", sans-serif;
 }
+
 .site-header .site-header-inner {
   padding-left: 1.5em;
   font-size: x-large;
 }
+
 .site-header .header-items {
   padding: 1.5em;
   width: max-content;
@@ -44,10 +89,11 @@ body {
   font-size: larger;
   flex-wrap: wrap;
 }
+
 .site-header .header-items * {
   padding-left: 2em;
 }
-
+/*
 .background {
   display: flex;
   position: absolute;
@@ -56,23 +102,26 @@ body {
   height: calc(100% - 5em);
   z-index: -1;
 }
+
 .background div {
   width: 100%;
   background-color: black;
   box-shadow: inset 0 0 1000px rgba(8, 158, 196, 0.5);
   transition: 0.2s ease-in-out;
 }
+
 .background div:hover {
   transition: 0.2s ease-in-out;
   box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
 }
-
+*/
 .profile-container {
   padding-top: 3em;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+
 .profile-container .profile-card {
   width: 33%;
   text-align: center;
@@ -87,6 +136,7 @@ body {
   text-overflow: ellipsis;
   font-family: "Century Gothic", sans-serif;
 }
+
 .profile-container .profile-card span {
   font-size: 15px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -94,13 +144,16 @@ body {
   font-weight: 100;
   padding: 0.2em;
 }
+
 .profile-container .profile-card span:not(.profile-name) {
   padding-bottom: 1em;
 }
+
 .profile-container .profile-card img {
   border-radius: 50%;
   width: 10em;
 }
+
 .profile-container .profile-card .profile-name {
   font-size: xx-large;
 }
