--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             Vector Development
         </div>
         <div class="header-items">
-            <label>Discord</label>
+            <a href="https://www.discord.gg/cEvRMz5dkg" target="_blank">Discord</a>
             <label>Bots</label>
         </div>
     </div>
