--- a/templates/style.css
+++ b/templates/style.css
@@ -115,6 +115,10 @@ body.dark {
   box-shadow: inset 0 0 1000px rgba(9, 233, 255, 0.4);
 }
 */
+a { 
+    color: white;
+}
+
 .profile-container {
   padding-top: 3em;
   display: flex;
