--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             Vector Development
         </div>
         <div class="header-items">
-            <a href="https://www.discord.gg/cEvRMz5dkg" target="_blank">Discord</a>
+            <a href="https://www.discord.gg/cEvRMz5dkg" style="text-decoration:none" target="_blank"><span class="ca">Discord</span></a>
             <label>Bots</label>
         </div>
     </div>
