license update, embed page, embed setup

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vector Development</title>
+    <!--    
+    <meta content="Vector Development" property="og:title" />
+    <meta content="official vector development website idk" property="og:description" />
+    <meta content="https://vectordev.xyz" property="og:url" />
+    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="#2C54FC" data-react-helmet="true" name="theme-color" />
+    -->
 </head>
+
 <body>
     
     <div class="site-header">
