--- a/templates/embed_image.html
+++ b/templates/embed_image.html
@@ -4,6 +4,6 @@
     <title>logo</title>
 </head>
 <body>
-    <img src="./../assets/logo.png">
+    <img src="./../assets/logo.png" width="580" height="387"></img>
 </body>
 </html>    
