--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="profile-card card-3">
-            <img src="https://cdn.discordapp.com/avatars/596481615253733408/a2e086c61103481bd933a8a229aa0f80.png?size=1024" alt="gdkid" class="profile-img">
+            <img src="https://cdn.discordapp.com/avatars/596481615253733408/4967f6076223b295b65817c3d1973ab5.webp?size=1024" alt="gdkid" class="profile-img">
             <span class="profile-name">gdkid#0111</span>
             <span></span>
             <ul>
